Adding a few new files and editing index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1> hatdog </h1>
+
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis nemo eveniet dolore vitae esse iure praesentium nam impedit. Iusto quam, magnam eveniet quod omnis suscipit aperiam recusandae nulla vitae fugit minima animi, totam sit dolores! Laborum, dignissimos repellat! Saepe animi totam reprehenderit dicta natus hic pariatur quaerat autem, facilis ullam? 
+    </p>
 </body>
 </html>
