--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title> PayApp </title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/index.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/js/index.js"></script>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <h1> PayApp </h1>
-
-        <div id="content">
-            <form id="payment_form">
-                <input type="text" name="name" id="name" class="field" placeholder="Name"> <br>
-                <input type="number" name="refno" id="refno" class="field" placeholder="Reference Number"> <br>
-                <input type="number" name="amount" id="amount" class="field" placeholder="Amount"> <br>
-                <input type="button" name="submit" id="submit" value="SUBMIT">
-            </form>
-
-            <p id="error"></p>
-
-            <!--
-                TODO: Display all transactions here. Each transaction should be retrieved from the database and displayed through rendering `../partials/card.hbs`.
-            -->
-            <div id="cards">
-            <!-- your code here -->
-
-            {{#each result}}
-                {{> card }}
-            {{/each}}
-            
-            </div>
-        </div>
-    </div>
+    <h1> hello </h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla omnis quam cum, accusantium quisquam exercitationem, animi, perferendis beatae non voluptate atque impedit? Assumenda laboriosam unde esse voluptas tempora dolorum corrupti numquam praesentium itaque recusandae placeat, voluptatibus quaerat deserunt quam sequi repellat rerum reprehenderit. Adipisci iste, facilis rerum sint atque, velit suscipit voluptate praesentium libero vitae, mollitia expedita a quaerat ad. Fugiat voluptate nobis ad sunt non tempora provident laboriosam ipsum vero, expedita aliquam nihil recusandae sed dolorum, earum culpa quasi iste neque assumenda minus exercitationem, ex perspiciatis numquam at! Dicta saepe ab tempore recusandae laborum dolorem possimus sit, consequatur aut!
+    </p>
 </body>
 </html>
-
