refined login system

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -12,6 +12,8 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla omnis quam cum, accusantium quisquam exercitationem, animi, perferendis beatae non voluptate atque impedit? Assumenda laboriosam unde esse voluptas tempora dolorum corrupti numquam praesentium itaque recusandae placeat, voluptatibus quaerat deserunt quam sequi repellat rerum reprehenderit. Adipisci iste, facilis rerum sint atque, velit suscipit voluptate praesentium libero vitae, mollitia expedita a quaerat ad. Fugiat voluptate nobis ad sunt non tempora provident laboriosam ipsum vero, expedita aliquam nihil recusandae sed dolorum, earum culpa quasi iste neque assumenda minus exercitationem, ex perspiciatis numquam at! Dicta saepe ab tempore recusandae laborum dolorem possimus sit, consequatur aut!
         <br>
         <img src="https://drive.google.com/uc?id=1Hq_UvPspw9wyIEqvfrwCmzRqvBayUwZZ&export=download">
+
+        <h1> go <a href='/'>back</a> </h1>
         
     </p>
 </body>
