added new index page logic

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,7 @@
             </div>
         
             <div class='postlist'>
+                <%= result.length %>
 
             </div>
             
