--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <%- include('./partials/navbar.ejs')%>
+
     <div class='wrapper'>
 
         <div class='postwall'>
@@ -17,9 +19,9 @@
                 <input name='filename' class='upload-button' type='file'>
                 <input type="submit" class='submit-button'>
             </div>
-        
+
             <div class='postlist'>
-                <% for(i=0; i< post.length; i++ ) { %>
+                <% for(i=1; i< post.length; i++ ) { %>
                     <%- include('./partials/postbox', {i, sess, votepost} ) %>
                 <% } %>
 
