--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
         </a>
 
 
-        <a class='nav-link' href='/'>
+        <a class='nav-link' href='/page/home'>
             <div class='nav-item'>
                 
                 <span class='nav-text'>home</span>
@@ -20,7 +20,7 @@
             </div>
         </a>
 
-        <a class='nav-link' href='/popular'>
+        <a class='nav-link' href='/page/popular'>
             <div class='nav-item'>
                 
                 <div class='nav-text'>popular</div>
@@ -30,7 +30,7 @@
             </div>
         </a>
         
-        <a class='nav-link' href='/trending'>
+        <a class='nav-link' href='/page/trending'>
             <div class='nav-item'>
                 
                 <div class='nav-text'>trending</div>
@@ -41,7 +41,7 @@
         </a>
 
 
-        <a class='nav-link' href='/new'>
+        <a class='nav-link' href='/page/new'>
             <div class='nav-item'>
                 
                 <div class='nav-text'>new</div>
