--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,53 @@
 </head>
 <body>
     <div class='wrapper'>
-            
+        <div class='image-grid'>
+            <div class='image-grid-col'>
+                <img class='background-image' src='/images/catdatabase/catpic1.png'>
+                <img class='background-image' src='/images/catdatabase/catpic2.png'>
+                <img class='background-image' src='/images/catdatabase/catpic3.png'>
+                <img class='background-image' src='/images/catdatabase/catpic4.png'>
+                <img class='background-image' src='/images/catdatabase/catpic5.png'>
+                <img class='background-image' src='/images/catdatabase/catpic6.png'>
+                <img class='background-image' src='/images/catdatabase/catpic7.png'>
+                <img class='background-image' src='/images/catdatabase/catpic8.png'>
+                <img class='background-image' src='/images/catdatabase/catpic9.png'>
+            </div>
+            <div class='image-grid-col'>
+                <img class='background-image' src='/images/catdatabase/catpic10.png'>
+                <img class='background-image' src='/images/catdatabase/catpic11.png'>
+                <img class='background-image' src='/images/catdatabase/catpic12.png'>
+                <img class='background-image' src='/images/catdatabase/catpic13.png'>
+                <img class='background-image' src='/images/catdatabase/catpic14.png'>
+                <img class='background-image' src='/images/catdatabase/catpic15.png'>
+                <img class='background-image' src='/images/catdatabase/catpic16.png'>
+                <img class='background-image' src='/images/catdatabase/catpic17.png'>
+                <img class='background-image' src='/images/catdatabase/catpic18.png'>
+            </div>
+            <div class='image-grid-col'>
+                <img class='background-image' src='/images/catdatabase/catpic19.png'>
+                <img class='background-image' src='/images/catdatabase/catpic20.png'>
+                <img class='background-image' src='/images/catdatabase/catpic21.png'>
+                <img class='background-image' src='/images/catdatabase/catpic22.png'>
+                <img class='background-image' src='/images/catdatabase/catpic23.png'>
+                <img class='background-image' src='/images/catdatabase/catpic24.png'>
+                <img class='background-image' src='/images/catdatabase/catpic25.png'>
+                <img class='background-image' src='/images/catdatabase/catpic26.png'>
+                <img class='background-image' src='/images/catdatabase/catpic27.png'>
+            </div>
+            <div class='image-grid-col'>
+                <img class='background-image' src='/images/catdatabase/catpic28.png'>
+                <img class='background-image' src='/images/catdatabase/catpic29.png'>
+                <img class='background-image' src='/images/catdatabase/catpic30.png'>
+                <img class='background-image' src='/images/catdatabase/catpic31.png'>
+                <img class='background-image' src='/images/catdatabase/catpic32.png'>
+                <img class='background-image' src='/images/catdatabase/catpic33.png'>
+                <img class='background-image' src='/images/catdatabase/catpic34.png'>
+                <img class='background-image' src='/images/catdatabase/catpic35.png'>
+                <img class='background-image' src='/images/catdatabase/catpic36.png'>
+            </div>
+        </div>
+
         <div class='leftside'>
 
             <div class='upperhalf'>
